--- a/data/Materials of Legendary Craftsmen.wiki
+++ b/data/Materials of Legendary Craftsmen.wiki
@@ -6,4 +6,5 @@
 
 -Great Treant of [Tajuru] - Every few hundred years, a treant grows so old and large enough to gain the respect of it's fellow tree fey, and they will gather around it to protect it's wisdom and history, to those who have harvested this great treant's lumber though have been greatly rewarded with the strongest, most beautiful lumber they've ever acquired, with such life force that it's said to continue to grow even after being harvested. 
 
+-Holding Leather - An intricate process of dusting Blink Dog leathers with ground phase spider carapaces has yielded leathers that when masterfully crafted into a pouch seem to contain more than what they aught. Many have attempted this process to no avail, as either the magic is lost in processing or simply not done right. (DC 26)
 
