adding HOTD notes

--- a/OneWiki.wiki
+++ b/OneWiki.wiki
@@ -4,12 +4,12 @@ data_dir = data
 [main]
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
-indexsearch_enabled = False
-last_wiki_word = Arabasta
+versioning_storagelocation = 0
+last_wiki_word = Group Three Notes
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
-filestorage_identity_moddateisenough = False
+trashcan_storagelocation = 0
 export_default_dir = 
 trashcan_maxnoofbags = 200
 tabs_maxcharacters = 0
@@ -17,18 +17,18 @@ trashcan_askondelete = True
 wiki_icon = 
 headingsasaliases_depth = 0
 wiki_name = OneWiki
-tree_expandednodes_rememberduration = 2
+wikipagetitle_creationmode = 1
 wikipagetitleprefix = ++
 wikipagetitle_fromlinktitle = False
 wiki_lastactivetabno = 0
 first_wiki_word = 
 wikipagefiles_gracefuloutsideaddandremove = True
-versioning_storagelocation = 0
+indexsearch_enabled = False
 wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
-wikipagetitle_creationmode = 1
+tree_expandednodes_rememberduration = 2
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Erky,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran,wikipage/Sentient Rock Henry;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Towns,wikipage/Arabasta;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Dungeons,wikipage/Ak'anon Mines,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Rex The Smasher;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon,wikipage/Orla;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Feywild,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Characters;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Otis,wikipage/Materials of Legendary Craftsmen;wikipage/OneWiki,wikipage/Dungeons,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Characters,wikipage/Gorda;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Felwithe,wikipage/Oliander;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki;wikipage/OneWiki,wikipage/Characters,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Dallben the Vegetable;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Towns,wikipage/Nowa Huta,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Gimble,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Korro Kurro,wikipage/Queen Torgga,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ,wikipage/Marines;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon,wikipage/Namfoodle;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Erky,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Dungeons,wikipage/Ak'anon Mines,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Rex The Smasher;wikipage/OneWiki,wikipage/Characters;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Feywild,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Organizations;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Otis,wikipage/Materials of Legendary Craftsmen;wikipage/OneWiki,wikipage/Dungeons,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Characters,wikipage/Gorda;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Felwithe,wikipage/Oliander;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki;wikipage/OneWiki,wikipage/Characters,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon,wikipage/Orla;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Dallben the Vegetable;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran,wikipage/Sentient Rock Henry;wikipage/OneWiki,wikipage/Towns,wikipage/Nowa Huta,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Gimble,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Korro Kurro,wikipage/Queen Torgga,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ,wikipage/Marines;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon,wikipage/Namfoodle;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
@@ -36,7 +36,7 @@ tree_expandednodes_descriptorpathes_views =
 tree_last_root_wiki_word = OneWiki
 db_pagefile_suffix = .wiki
 filestorage_identity_moddatemustmatch = False
-trashcan_storagelocation = 0
+filestorage_identity_moddateisenough = False
 wiki_database_type = original_sqlite
 wikipagefiles_asciionly = False
 indexsearch_formatno = 1
