--- a/data/Don Kreig.wiki
+++ b/data/Don Kreig.wiki
@@ -2,6 +2,8 @@
 
 One of the most successful pirates currently alive. He operates a large fleet of pirates with about 10 ships and a total crew count of about 700. He himself is a rather rude and disgruntled man who wears a great set of plate armor.
 
+FLAG: Black background yellow horned helmet
+
 Has a bounty issued by the [Marines] 
 
 +++Don Kreig
