--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1,5 +1,7 @@
 ﻿++ Group Three Notes
 
+Name: Horror Of The Void
+
 SHIPS:
 -Reworked Keelboat from Nowa Huta
     -Sophia, Lars, Kaylin, [Peiron] + 11 marines
@@ -12,8 +14,8 @@ XXXXXXX  XXXXXXX
 
 XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
-XXXXXXX  XXX
-XXXXXXX
+XXXXXXX  XXXXXXX
+XXXXXXX  XXXXXX
 
 [Kyra] orders a bronze barding for her wolf Vin from Erky at [Ak'anon]
   -7 days to make -DONE
@@ -546,3 +548,35 @@ Thia goes to see if she'd feel comfortable in the refugee district
 -organizing for the day after tomorrow
 -5 Keelboats
 -10 Marines per Keelboat (9 privates, 1 officer)
+
+++++Session 19
+<in Marine HQ>
+Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
+    -[Letho] agrees to come along
+    
+[Tril] to make a new flag for the group - black background howling wolf in gray, and red tenticles coming from the edges
+        -1g payed (asked for 7s)
+        
+[Plosive] and [Kyra] watch the play Harmon and Suleith 
+    -donating 1g to [Louis Numre]
+    
+[Plosive] goes to the quartermaster and rents the forge for the day for 2s
+    -crafting glass gnome
+
+--long rest on the warship
+
+[Plosive] goes to the quartermaster and rents the forge for the day for 2s
+    -crafting glass rings
+
+"Falone" - Kyra is Warned to not snoop around the Prison District, she claims she was married recently and changed names and therefore appeared uncertain about her name. 
+    ****Warden finds out that private Falone was marked as AWOL 
+    
+[Plosive] and [Kyra] attempt to make glass/wood rings
+
+--long rest on warship
+    -1 warship w/ Kaylin & [Letho]
+    -5 Keelboats
+    -10 Marines per Keelboat (9 privates, 1 officer)
+    
+8 days from [Marine HQ] to [Arabasta] XXXXXXXX   
+    
