--- a/data/Lilt.wiki
+++ b/data/Lilt.wiki
@@ -1,3 +1,6 @@
 ﻿++ Lilt
 
 home of the vegepymy lilties, onion people.
+
+
+Lilty village, relatives of the Vegepygmies, offer their young as tribute (onion people)
