--- a/data/Nogg.wiki
+++ b/data/Nogg.wiki
@@ -1,3 +1,8 @@
 ﻿++ Nogg
 
+use Warlord (pg 220)
+
 Half Koloss that wants to surpass his brother [Rex The Smasher] and command his ship.
+
+Nogg catches wind from Don Krieg's crew that both [Rex The Smasher] and [Don Kreig] have been taken down.
+-he travels to [Arabasta] to assert his dominance
