--- a/data/Eukar.wiki
+++ b/data/Eukar.wiki
@@ -2,6 +2,12 @@
 
 (Neriak), home of the Vegepygmies, small plant people 
 
+Eukar has a lot of short vegetation and very sunny skies with lots of rain (yes, rain with no clouds, whuuuut)
+
 Vegepygmy - (pg 196)
 have no leader, and work in harmony together
 
+++++Places of interest
+
+Mushroom Merchant - Vinir
+    -2s per lb of Mushrooms imported from [Otis]
