adding god avatars

--- a/data/Bahamut.wiki
+++ b/data/Bahamut.wiki
@@ -4,7 +4,8 @@ God of justice and nobility (pg 10 of DM handbook)
 Lawful Good
 Oversees [Marine HQ]
 Symbol: Dragon's head, in profile, facing left
-
+Home Plane: Celestia
+  http://forgottenrealms.wikia.com/wiki/Celestia 
 
 
 a massive, long and sinuous dragon with silver-white scales and blue, catlike eyes.
@@ -17,3 +18,8 @@ When Released:
         -will peacefully leave his lair as a frail old hermit and begin doing what is needed to stop the evil.
     -by an attack that deals more than 250 damage:
         -will awaken and retaliate before going back to sleep.
+        
+Avatar: Ancient Silver Dragon (pg 116)
+    and seven guardian golden wyrms (transformed from canaries) (Adult Gold Dragon pg 114)    
+    
+   
