--- a/data/Gruumsh.wiki
+++ b/data/Gruumsh.wiki
@@ -4,7 +4,18 @@ God of destruction, currently sealed under a mountain near [Luthadel], causing a
 Held at bay by the god-emporer of Luthadel
 Oversees [Kunark]
 Symbol: Triangular Eye with bony protrusions
+Home Plane: Acheron
 
 When Released:
     -by [Venril Sathir] being slain:
         -Opens a portal for his orcish creations to conquor to the world.
+        
+
+++++Avatar: Giant Orc (use Empyrean pg 130)
+    An enourmous purest blood orc that stands close to 20ft tall. Arms and legs as thick as an average tree. Amungst the many scars scattered on his flesh, the most hideous one is over his left eye.
+    
+    Titan Maul - +20 TH, reach 15ft, 10d6+14, DC 19 CON save or be stunned until Gruumsh's next turn
+    
+    
+    
+    
