adding evil group notes

--- a/data/AkumaFruits.wiki
+++ b/data/AkumaFruits.wiki
@@ -20,7 +20,7 @@ LOGIA
 7. Ice element [Aokiji]
 8. Light Element [Kizaru]
 9. Gold element
-10. Wood element
+10. Wood element [Grogar]
 11. Glue element
 12. Crystal element
 13. Shadow element 
