--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -602,3 +602,22 @@ Teleport back to the cave to the Material Plane
   -flys back to [Ko Foren] and enters the Tarasque cave
   -slays the Tarasque (scales are 10lbs each)
   -teleports back to [Tajuru]
+  
+++++Session 39
+  [Ehlonna] encountered while boasting over 3 hunters who were also boasting about thier bullette kill.
+
+  Leatherworker in [Tajuru] visited
+  500,000g
+  16,666 days to make a Belt of Giant Strength 30
+    45years
+    1,500g given to begin work
+    
+  Teleport to [Korro Kurro] using vines and cricket to get to the portal.
+    -the group travels through the green sparking portal to the material plane
+    
+  The group travels briefly back to the boat
+  -[Grogar] consumes the Wood Fruit  
+  -[Krieger] plane shifts the group to [Tajuru]
+     -Middle of a Neogi invasion
+      
+      
