--- a/data/Taipan.wiki
+++ b/data/Taipan.wiki
@@ -11,3 +11,14 @@ Lead by the Yuan Ti, [Queen Saheeli]
 Shamanic Temple of the Sands
     -Staff of the Adder - 100g (pg 203)
     -Staff of the Python - 100g (pg 204)
+    
+Taipan Glassworks - Shijam M
+    Glass - 1g per lb
+    Driftglobe - 75g (pg 166)
+    Eyes of Minute Seeing - 50g (pg 168)
+    Eyes of the Eagle - 50g (pg 168)
+    
+Monestary of the Snake
+    Many monks sit in the sand zen gardens meditating. Gathering strength from the land.
+    
+    
