--- a/data/Tajuru.wiki
+++ b/data/Tajuru.wiki
@@ -16,6 +16,10 @@ Great Treant encounter (Mahogany)
 
 3 Hunters (Archers pg 210 of Volos) come home from [Ko Foren] gloriously on thier Gryphon mounts
   Bringing a Bullette cleaved into three chunks
+  The Thuben Brothers
+  -Rem
+  -Gillant
+  -Frellian
 
 ++++Areas of Interest
 
