adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -580,3 +580,9 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     
 8 days from [Marine HQ] to [Arabasta] XXXXXXXX   
     
+++++Session 20
+   the group has liberated [Arabasta]
+    - [Nogg] was re-slain
+    - 24 marines + 4 officers survived
+    
+    
