--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -583,6 +583,18 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
 ++++Session 20
    the group has liberated [Arabasta]
     - [Nogg] was re-slain
-    - 24 marines + 4 officers survived
+    - 24 marines + 5 officers survived
     
-    
+++++Session 21
+   1 officer and 4 privates back to [Marine HQ] with full report
+     -2 keelboats
+   4 officers and 20 privates to keep guard over [Arabasta]
+     -3 keelboats
+     -1 warship
+   
+   The group follows a map that leads into the deserts of [Arabasta]
+     -5 hours
+     5 flying snakes slain 
+     -[Tessa] spares the dying on two of them
+     The opening to the resting place of Kord is opened 
+   
