--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -620,4 +620,20 @@ Teleport back to the cave to the Material Plane
   -[Krieger] plane shifts the group to [Tajuru]
      -Middle of a Neogi invasion
       
-      
+++++Session 40
+  The group is in the midst of the battle for [Tajuru]
+
+  -Neogi enslaved creatures of [Ko Foren]
+    -rode Roc's to [Otis], setup a foothold before then raiding [Tajuru]
+    -[Greater Alfitaria] has fallen
+    -[Eukar] has fallen
+    -[Taipan] has been resistant due to sands being un-tunnelable
+    -[Pumanath] is on edge
+    -[Nahiri] is about to set out to help [Tajuru]
+    -[Bright Cliffs] is at the defence of [Taipan]
+    -[Korro Kurro] is battling in the underground   
+  
+  the group goes to the center of action around the Mage school of Corellon in [Tajuru]
+  -along with slaying the neogi, all of the students and faculty were slain except one teacher who was able to misty step away.
+    
+  18,200 exp given  
