adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -594,7 +594,13 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
    
    The group follows a map that leads into the deserts of [Arabasta]
      -5 hours
-     5 flying snakes slain 
+   5 flying snakes slain 
      -[Tessa] spares the dying on two of them
-     The opening to the resting place of Kord is opened 
+   The opening to the resting place of Kord is opened 
+     -ventures down, kills the three snake skeletons  
+     
+++++Session 22
+   The group defeats the creatures in Kord's cave and acquire the [Stone of Kord]
+   The group makes thier way back to [Arabasta]     
+     -long rest
    
